# TinyZipper

./: Cargo.toml  README.md  test_file
benches/: async_file_reader_bench.rs
src/: lib.rs
src/zipper/: file_buf_reader.rs  hash_table_serialize.rs  mod.rs  zip_file_header.rs
