[package]
name = "tiny-zipper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "async_file_reader_bench"
harness = false